@@ -41,7 +41,7 @@ ALL_LINGUAS="sv"
 dnl AM_GNU_GETTEXT
 
 ## here we get the flags we'll actually use
-PKG_CHECK_MODULES(METACITY, gtk+-2.0 >= 1.3.7)
+PKG_CHECK_MODULES(METACITY, gtk+-2.0 >= 1.3.9)
 
 CFLAGS="$METACITY_CFLAGS $CFLAGS"
 
@@ -74,6 +74,12 @@ if test x"$GDK_PIXBUF_CSOURCE" = xno; then
 fi
 
 AC_SUBST(GDK_PIXBUF_CSOURCE)
+
+## hack to work with old GTK versions for now 
+save_LDFLAGS=$LDFLAGS
+LDFLAGS="$METACITY_LIBS $LDFLAGS"
+AC_CHECK_FUNCS(gdk_pixbuf_new_from_stream)
+LDFLAGS=$save_LDFLAGS
 
 AC_OUTPUT([
 Makefile
